updated libraries