@@ -1,72 +1,75 @@
-group 'ch.bildspur.ledforest'
-version '1.0-SNAPSHOT'
+plugins {
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.4.0'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id "com.github.ManifestClasspath" version "0.1.0-RELEASE"
+    id 'application'
+    id 'org.bytedeco.gradle-javacpp-platform' version "$javacppVersion"
+}
+
+group 'ch.bildspur'
+version '3.1'
 
 import org.gradle.internal.os.OperatingSystem
 
-
-buildscript {
-    ext.kotlin_version = '1.2.61'
-
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
+wrapper {
+    gradleVersion = '6.3'
+    distributionUrl = "https://services.gradle.org/distributions/gradle-$gradleVersion-bin.zip"
 }
 
-apply plugin: 'kotlin'
-
-apply plugin: 'application'
-mainClassName = "ch.bildspur.ledforest.Main"
-applicationDefaultJvmArgs = [""]
-
-switch (OperatingSystem.current()) {
-    case OperatingSystem.LINUX:
-        project.ext.osName = "linux"
-        break
-    case OperatingSystem.MAC_OS:
-        project.ext.osName = "macos"
-        applicationDefaultJvmArgs = ["-Djava.library.path=lib/opencv31/mac:lib/LeapMotion/library/macosx"]
-        break
-    case OperatingSystem.WINDOWS:
-        project.ext.osName = "windows"
-        applicationDefaultJvmArgs = ["-Djava.library.path=lib/LeapMotion/library/windows64;lib/opencv31/x64/opencv_java310.dll"]
-        break
+javafx {
+    version = "11"
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing', 'javafx.graphics']
 }
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
+    // json
     compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
     compile 'com.github.salomonbrys.kotson:kotson:2.5.0'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 
-    compile files('lib/postfx/PostFX.jar')
+    // bildspur libs
+    implementation "com.github.cansik:bildspur-base:7a2701c0c6"
+    implementation 'com.github.cansik:bildspur-ui:fdbba863da'
 
     // processing
-    compile group: 'org.processing', name: 'core', version: '3.3.7'
-    compile group: 'org.jogamp.jogl', name: 'jogl-all-main', version: '2.3.2'
-    compile group: 'org.jogamp.gluegen', name: 'gluegen-rt-main', version: '2.3.2'
+    compile files("lib/processing/core.jar")
+    compile files("lib/processing/gluegen-rt.jar")
+    compile files("lib/processing/jogl-all.jar")
 
-    compile files('lib/artnet/artnet4j.jar')
+    // postfx
+    compile files('lib/postfx/PostFX.jar')
 
-    compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
+    // artnet
+    compile 'ch.bildspur:artnet4j:0.6.2'
 
+    // javafx
+    compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
+    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.0'
+
+    // leap motion java
     compile files('lib/LeapMotion/library/LeapJava.jar')
     compile files('lib/LeapMotion/library/LeapMotion.jar')
 
-    compile files('lib/plugins/jmdns/jmdns-3.5.1.jar')
-    compile files('lib/plugins/jmdns/slf4j-api-1.7.21.jar')
-    compile files('lib/plugins/jmdns/slf4j-simple-1.7.21.jar')
+    // jdms
+    compile group: 'org.jmdns', name: 'jmdns', version: '3.5.1'
+    compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.25'
 
+    // oscp5 for osc output and input
     compile files('lib/plugins/oscP5/oscP5.jar')
 
+    // peasy cam
     compile files('lib/plugins/peasycam/peasycam.jar')
 
+    // minim for audio
     compile files('lib/plugins/minim/library/minim.jar')
     compile files('lib/plugins/minim/library/jsminim.jar')
     compile files('lib/plugins/minim/library/jl1.0.1.jar')
@@ -74,9 +77,25 @@ dependencies {
     compile files('lib/plugins/minim/library/tritonus_aos.jar')
     compile files('lib/plugins/minim/library/tritonus_share.jar')
 
-    compile files('lib/realsense/realsense.jar')
-    
-    compile files('lib/opencv31/opencv-310.jar')
+    // bildspur libs
+    implementation "com.github.cansik:bildspur-base:7436a637a5"
+    implementation 'com.github.cansik:bildspur-ui:fdbba863da'
+
+    // javacv & javacpp
+    compile group: 'org.bytedeco', name: 'javacv', version: "$javacppVersion"
+    compile group: 'org.bytedeco', name: 'opencv-platform', version: "4.4.0-$javacppVersion"
+    compile group: 'org.bytedeco', name: 'openblas-platform', version: "0.3.10-$javacppVersion"
+    compile group: 'org.bytedeco', name: 'librealsense2-platform', version: "2.29.0-$javacppVersion"
+    compile group: 'org.bytedeco', name: 'ffmpeg-platform', version: "4.3.1-$javacppVersion"
+}
+
+application {
+    mainClassName = "ch.bildspur.ledforest.Main"
+    applicationDefaultJvmArgs = ["-Djava.library.path=",
+                                 "--add-opens", "javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED",
+                                 "--add-opens", "javafx.graphics/javafx.stage=ALL-UNNAMED",
+                                 "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED",
+                                 "--add-opens", "javafx.graphics/com.sun.glass.ui=ALL-UNNAMED"]
 }
 
 task fatJar(type: Jar) {
